# infra-utils

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  package.go
deployinfo/: BUILD.bazel  deploy_data.go  deploy_info.go  deploy_info_interface.go  deploy_info_test.go
deployinfo/testdata/: multi-deploy-info-and-compose.yaml  multi-deploy-info.yaml  simple-prod-deploy-info.yaml  simple-staging-deploy-info.yaml  single-compose.yaml
file/: BUILD.bazel  file_manager.go  file_manager_fake.go  file_manager_interface.go  file_manager_test.go
filegenerator/: BUILD.bazel  file_generator.go  file_generator_interface.go  file_generator_test.go
filegenerator/testdata/: single-entry.yaml
template/: BUILD.bazel  template.go  template_interface.go  template_test.go
